# Bot-discord

./: .replit  COMMIT_EDITMSG  ORIG_HEAD  antilink.py  app.py  chatgpt.py  config.py  daily_question.py  daily_questions.json  index  logging.py  main.py  main_flask.py  requirements.txt  restart_bot.py  role_messages.json  tickets.py  tickets_data.json  tiktok_cache.json  uptimerobot-setup.md  utils.py  verification_data.json
main/: invites.py  keep_alive.py  levels.py  levels_data.json  moderation.py  music.py  roles.py  tiktok.py
menu/: README.md  emoji.py  giveaway.py  invites_data.json  pyproject.toml  rules_data.json  setup.py  warnings_data.json
